[metadata]
name = kwant
author = C. W. Groth (CEA), M. Wimmer, A. R. Akhmerov, X. Waintal (CEA), and others
author_email = authors@kwant-project.org
description = Kwant: a package for quantum transport calculations
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://kwant-project.org
license = BSD-2-Clause
license_files =
    LICENSE.rst
platforms =
    Unix
    Linux
    MacOS X
    Windows
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.8
install_requires =
    numpy >= 1.18.0
    scipy >= 1.3.0, != 1.6.1
    tinyarray >= 1.2.2

[options.extras_require]
plotting = matplotlib >= 3.2.2; plotly >= 2.2.2
continuum = sympy >= 1.5.1
qsymm = qsymm >= 1.2.6

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
